--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Cats explaining Spark protocol cryptography",
   "scripts": {
     "start": "remotion studio",
-    "build": "remotion render CatSparkExplainer out/video.mp4",
+    "build": "remotion bundle --public-dir=public",
+    "render": "remotion render CatSparkExplainer out/video.mp4",
     "upgrade": "remotion upgrade"
   },
   "dependencies": {
